# PokeSearch

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md
pokesearch/: Cargo.toml
pokesearch/src/: main.rs
src/: main.rs
static/: styles.css
templates/: about.hbs  firstgen.hbs  gencard.hbs  index.hbs  invalidsearch.hbs  navbar.hbs  not_found.hbs  pokemoncard.hbs  search.hbs
