[package]
name = "pokesearch"
version = "0.1.0"
authors = ["rivera26 <rivera26@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_contrib = {version="0.4.10", features=["json", "templates", "handlebars_templates"]}
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"